# termsnap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: release.yml
installer/: termsnap.wxs
termsnap/: __init__.py  __main__.py  app.py  capture.py  config.py  hotkey.py  selector.py  settings_dialog.py
