[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "termsnap"
version = "0.1.1"
description = "Hotkey-driven region screenshot tool for terminal users"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "pynput>=1.7.6",
]

[project.scripts]
termsnap = "termsnap.__main__:main"

[tool.setuptools.packages.find]
include = ["termsnap*"]
